chore : 템플릿관리 스크립트 수정

--- a/module-admin/src/main/resources/templates/templateManage/view.html
+++ b/module-admin/src/main/resources/templates/templateManage/view.html
@@ -193,16 +193,16 @@
                     },
 
                     columns: [
-                        {   width : 80,
+                        {
+                            width: 80,
                             render: function (data, type, row) {
                                 return `
                                     <div class="border-checkbox-section">
-                                        <div class="border-checkbox-group">
-                                            <input type="checkbox" class="border-checkbox " id="allCheckBox" name="allCheckbox" value="All">
-                                            <label class="form-label border-checkbox-label" for="allCheckBox"></label>
-                                        </div>
-                                    </div>
-                                `;
+                                                <div class="border-checkbox-group">
+                                                    <input type="checkbox" class="border-checkbox" data-id="${row.id}" name="tableCheckbox" id="checkbox${row.id}">
+                                                    <label class="form-label border-checkbox-label" for="checkbox${row.id}"></label>
+                                                </div>
+                                            </div>`;
                             }
                         },
                         {data : 'rowNumber', width : 80}, // 페이징 후 No. 변경
