ongoing: 자원 트리구조 1depth html 문자열 생성 추가

--- a/module-admin/src/main/resources/templates/layout/nav.html
+++ b/module-admin/src/main/resources/templates/layout/nav.html
@@ -470,6 +470,7 @@
                 </li>-->
             </ul>
 
+            <th:block th:utext="${@resourceController.menuPrint()}" />
         </div>
     </nav>
 </th:block>
