--- a/module-admin/src/main/resources/templates/sendHistory/view.html
+++ b/module-admin/src/main/resources/templates/sendHistory/view.html
@@ -196,7 +196,7 @@
                         },
                         {data : 'recipientNickname'},
                         {data : 'recipientEmail'},
-                        {data : 'sendedAt'},
+                        {data : 'sendedAt', width : 150},
                     ],
 
                     language: {
