--- a/module-admin/src/main/resources/templates/templateManage/view.html
+++ b/module-admin/src/main/resources/templates/templateManage/view.html
@@ -91,7 +91,7 @@
                             <h5><strong>템플릿 검색결과</strong></h5>
                         </div>
                         <div class="col-12 col-md-6 text-right">
-                            <button type="button" class="btn btn-transparent m-r-5" id="deleteBtn">삭제</button>
+                            <button type="button" class="btn btn btn-delete m-r-5" id="deleteBtn">삭제</button>
                             <button type="button" class="btn btn-transparent" id="insertBtn">등록</button>
                         </div>
                     </div>
@@ -194,7 +194,7 @@
 
                     columns: [
                         {
-                            width: 80,
+                            width: 70,
                             render: function (data, type, row) {
                                 return `
                                     <div class="border-checkbox-section">
@@ -223,7 +223,7 @@
                                 return row.isEnabled === 'Y' ? '사용' : '사용안함';
                             }
                         },
-                        {data : 'createdAt'},
+                        {data : 'createdAt', width : 100},
                     ],
 
                     language: {
