--- a/module-admin/src/main/resources/templates/member/tab/report.html
+++ b/module-admin/src/main/resources/templates/member/tab/report.html
@@ -94,13 +94,13 @@
                 },
 
                 columns: [
-                    {data: 'content'},
+                    {width:70,data: 'content'},
                     {
                         render: function (data, type, row) {
                             return `${row.nickname}(${row.email})`;
                         }
                     },
-                    {
+                    {width:120,
                         render: function (data, type, row) {
                             return `${row.category.value}`;
                         }
@@ -110,7 +110,7 @@
                             return `<button class="btn btn-gray" onclick="reportController.showContentPopup(${meta.row})"> 확인 </button>`;
                         }
                     },
-                    {data: 'reportedAt'},
+                    {width:100,data: 'reportedAt'},
                 ],
                 language: {
                     search: '검색',
