--- a/module-admin/src/main/resources/templates/saesigManage/detailForm.html
+++ b/module-admin/src/main/resources/templates/saesigManage/detailForm.html
@@ -1,23 +1,28 @@
+<div class="card tab-card">
+  <ul class="nav nav-tabs md-tabs" role="tablist">
+    <li class="nav-item">
+      <a class="nav-link active" data-bs-toggle="tab" href="javascript:void(0)" onclick="tabController.moveTab('info')"  role="tab" aria-selected="true" id="infoTab">새식정보</a>
+      <div class="slide"></div>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-bs-toggle="tab" href="javascript:void(0)" onclick="tabController.moveTab('chatting')" role="tab" aria-selected="false" id="chattingTab">채팅([[${adopt.chattingCnt}]])</a>
+      <div class="slide"></div>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-bs-toggle="tab" href="javascript:void(0)" onclick="tabController.moveTab('report')" role="tab" aria-selected="false" id="reportTab">신고([[${adopt.reportCnt}]])</a>
+      <div class="slide"></div>
+    </li>
+  </ul>
+</div>
+
 <div class="card">
   <div class="card-header p-b-0 nav-main">
-    <ul class="nav nav-tabs md-tabs" role="tablist">
-      <li class="nav-item">
-        <a class="nav-link active" data-bs-toggle="tab" href="javascript:void(0)" onclick="tabController.moveTab('info')"  role="tab" aria-selected="true" id="infoTab">새식정보</a>
-        <div class="slide"></div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" data-bs-toggle="tab" href="javascript:void(0)" onclick="tabController.moveTab('chatting')" role="tab" aria-selected="false" id="chattingTab">채팅([[${adopt.chattingCnt}]])</a>
-        <div class="slide"></div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" data-bs-toggle="tab" href="javascript:void(0)" onclick="tabController.moveTab('report')" role="tab" aria-selected="false" id="reportTab">신고([[${adopt.reportCnt}]])</a>
-        <div class="slide"></div>
-      </li>
-    </ul>
-  </div>
-  <div id="tab-content">
+    <div id="tab-content">
+    </div>
   </div>
 </div>
+
+
 
 <script th:inline="javascript">
   $(function(){
