--- a/module-admin/src/main/resources/templates/saesigManage/infoForm.html
+++ b/module-admin/src/main/resources/templates/saesigManage/infoForm.html
@@ -184,10 +184,9 @@
                     </select>
                 </div>
             </div>
-            <div class="col-lg-6 mb-3">
+            <div class="col-lg-12 mb-3">
                 <div class="mb-0 form-group">
-                    <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="is_vaccine"><strong>백신 접종
-                        여부</strong></label>
+                    <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="is_vaccine"><strong>백신 접종 여부</strong></label>
                     <div class="border-checkbox-section">
                         <div class="border-checkbox-group" th:each="vaccineItem : ${vaccine}">
                             <input class="border-checkbox " type="checkbox" name="vaccineList"
@@ -245,7 +244,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 mb-3">
+            <div class="col-lg-12 mb-3">
                 <div class="row form-group mb-3">
                     <label class="form-label col-sm-12 col-form-label p-t-0 pb-1"><strong>분양상태 변경이력</strong></label>
                     <div class="col-sm-12">
