--- a/module-admin/src/main/resources/templates/resources/view.html
+++ b/module-admin/src/main/resources/templates/resources/view.html
@@ -139,7 +139,12 @@
                         </div>
 
                         <div class="mb-3 form-group row">
-                            <div class="col-sm-12">
+                            <div class="col-sm-6">
+                                <input type="checkbox" class="js-single-small" name="isLoginDisallowed" id="isLoginDisallowed" checked/>
+                                <label for="isLoginDisallowed" class="v-middle">비로그인 허용 여부 </label>
+                            </div>
+
+                            <div class="col-sm-6">
                                 <input type="checkbox" class="js-single-small" name="isEnabled" id="isEnabled" checked/>
                                 <label for="isEnabled" class="v-middle">사용여부</label>
                             </div>
@@ -192,7 +197,8 @@
                             name: element.name,
                             depth: element.depth,
                             ord: element.ord,
-                            category: element.category
+                            category: element.category,
+                            isLoginDisallowed: element.isLoginDisallowed
                         };
                     });
                 }).fail(function (error) {
@@ -245,6 +251,7 @@
                                         $('#upperId').val(_this.selectedNode.original.id);
                                         $('#upperUrl').val(_this.selectedNode.original.url);
                                         $('#category').val('');
+
                                     }
                                 }
                             }, "delete": {
@@ -302,7 +309,7 @@
                 if (confirm('자원 정보를 수정하시겠습니까?')) {
                     const formData = $('#resourceForm').serializeObject();
                     formData.isEnabled = formData.isEnabled ? "Y" : "N";
-
+                    formData.isLoginDisallowed = formData.isLoginDisallowed ? "Y" : "N";
                     $.ajax({
                         url: `/admin/resources/${formData.id}`,
                         type: 'put',
@@ -326,6 +333,7 @@
                     formData.depth = this.selectedNode.original.depth + 1;
                     formData.ord = this.selectedNode.children.length + 1;
                     formData.isEnabled = formData.isEnabled ? "Y" : "N";
+                    formData.isLoginDisallowed = formData.isLoginDisallowed ? "Y" : "N";
 
                     $.ajax({
                         url: '/admin/resources',
@@ -370,6 +378,7 @@
                 $('#url').val(selectedNodeOriginal.url);
                 $('#category').val(selectedNodeOriginal.category);
                 adminCommon.toggleSwitch($('#isEnabled'), selectedNodeOriginal.isEnabled === 'Y');
+                adminCommon.toggleSwitch($('#isLoginDisallowed'), selectedNodeOriginal.isLoginDisallowed === 'Y');
                 $(`input[name=type]:input[value=${selectedNodeOriginal.type}]`).prop('checked', true);
                 $('#httpMethod').val(selectedNodeOriginal.httpMethod).niceSelect('update');
             },
