--- a/module-admin/src/main/resources/static/css/admin-tab.css
+++ b/module-admin/src/main/resources/static/css/admin-tab.css
@@ -14,6 +14,17 @@
     padding: 0;
     padding-top: 0.2rem;
     padding-left: 0.4rem;
+    margin-bottom: 10px;
+    height: 60px;
+}
+
+.card.tab-card .nav-tabs{
+    height: 60px;
+}
+
+.card.tab-card .md-tabs .nav-item a {
+    font-size: 16px;
+    padding: 16px 0 !important;
 }
 
 .nav-tabs .slide {
